added landing graphic

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Ian Winchester</title>
-    <script src="./script.js" charset="utf-8"></script>
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>Hi, I'm Ian</h1>
+    <div class='land-nav'>
+      <div>
+        <h1>Fancy a Cuppa</h1>
+        <h4>Click anywhere for the next page</h4>
+      </div>
+    </div>
+    <div class='talents hidden'>
+      <h2>Top of the morning to ya</h2>
+    </div>
+    <script src="./script.js" charset="utf-8"></script>
   </body>
 </html>
